fix align

--- a/ckanext/odsh/public/odsh.css
+++ b/ckanext/odsh/public/odsh.css
@@ -813,10 +813,18 @@ body {
     display: block;
     text-align: center;
 }
+.organization-image-info{
+    max-width: 225px;
+    max-height: 78px;
+    margin: auto;
+    display: block;
+    text-align: center;
+}
 .organization-image-container{
     padding-bottom: 15px;
     border-bottom: 2px solid #DBDBDB;
     margin-bottom: 15px;
+    text-align: center;
 }
 .is-table-row .organization-image-column {
     width: 225px;
